--- a/exercises/06-center-content/styles.css
+++ b/exercises/06-center-content/styles.css
@@ -1,3 +1,9 @@
-body{
-    background:blue;
+body {
+	background: blue;
+}
+.myDiv {
+	background-color: grey;
+	width: 400px;
+	flex: center;
+	margin: auto;
 }
