--- a/exercises/07-Sidebar/styles.css
+++ b/exercises/07-Sidebar/styles.css
@@ -1,11 +1,16 @@
 #wrapper {
-    background: grey;
+	background: grey;
+	height: 100%;
+	width: 100%;
+	display: flex;
 }
 
 #sidebar {
-    background: blue;
+	background: grey;
+	width: 30%;
 }
 
 #content {
-    background: yellow;
+	background: green;
+	width: 70%;
 }
