--- a/exercises/09.2-Calendar-icon/styles.css
+++ b/exercises/09.2-Calendar-icon/styles.css
@@ -11,7 +11,6 @@
 	border-radius: 3px;
 	position: absolute;
 }
-
 .calendar em {
 	display: block;
 	font-size: 15px;
@@ -19,29 +18,46 @@
 	background: #04599a;
 	border-bottom-right-radius: 3px;
 	border-bottom-left-radius: 3px;
+	position: absolute;
 }
-
-.calendar::before, .calendar:after{
-	content:'';
-	float:left;
-	width:8px;
-	height:8px;
-	background:#111;
-	z-index:1;
-	border-radius:10px;
-	box-shadow:0 1px 1px #fff;
-	}
-.calendar::before{left:11px;}	
-.calendar::after{right:11px;}
-
-.calendar em::before, .calendar em::after{
-	content:'';
+.calendar::before,
+.calendar::after {
+	content: "";
+	float: left;
+	width: 8px;
+	height: 8px;
+	background: #111;
+	z-index: 1;
+	border-radius: 10px;
+	box-shadow: 0 1px 1px #fff;
+}
+.calendar::before {
+	position: absolute;
+	left: 15px;
+}
+.calendar::after {
+	position: absolute;
+	left: 60px;
+}
+.calendar em::before,
+.calendar em::after {
+	content: "";
 	float: left;
 	margin: 10px;
-	width:4px;
-	height:14px;
-	background:blue;
-	z-index:2;
-	}
-.calendar em::before{left:13px;}	
-.calendar em::after{right:13px;}	
+	width: 4px;
+	height: 14px;
+	background: gainsboro;
+	z-index: 2;
+
+	border-radius: 2px 2px 2px 2px;
+}
+.calendar em::before {
+	position: absolute;
+	left: 7px;
+	bottom: 47px;
+}
+.calendar em::after {
+	position: absolute;
+	left: 52px;
+	bottom: 47px;
+}
